# redist-icons

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  cspell.config.yml  deno.json  pyproject.toml  svgo.config.mjs
.github/: FUNDING.yml  dependabot.yml  zizmor.yml
.github/dyn-ci-matrix/: action.yml  generate_matrix.nu
.github/workflows/: check-deno-updates.nu  check-deno-updates.yml  common.nu  deno-upgrades.nu  pre-commit.yml  python.yml  rust.yml  tag-release.nu  tag-release.yml
common/: README.md  deno.json  houseKeeping.ts  mod.ts  writeBinding.ts  writeFinder.ts  writeIcons.ts
crates/: README.md
crates/fontawesome/: Cargo.toml  deno.json  fontawesome_free_pack.pyi  main.ts  pyproject.toml
crates/fontawesome/src/finder/: part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs
crates/fontawesome/src/icons/: regular.rs
crates/fontawesome/src/py_binding/: part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs
crates/mdi/: Cargo.toml  README.md  deno.json  main.ts  material_design_icons_pack.pyi  pyproject.toml
crates/mdi/src/finder/: part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  (+28 more)
crates/octicons/: Cargo.toml  deno.json  main.ts  octicons_pack.pyi  pyproject.toml
crates/octicons/src/: lib.rs
crates/simple-icons/: Cargo.toml  deno.json  main.ts  pyproject.toml  simple_icons_pack.pyi
(+156 files in other folders)
